Fixed width of portfolio thumbnails on Firefox

--- a/css/inner.sass
+++ b/css/inner.sass
@@ -19,7 +19,7 @@
     clear: both
 
     img
-        max-width: 100%
+        width: 100%
         height: auto
         padding: 0
         margin: 0
